--- a/.hidden/CHANGELOG
+++ b/.hidden/CHANGELOG
@@ -1,3 +1,9 @@
+* Sat May 12 2018 Angelos Panagiotakis <agelospanagiotakis@gmail.com> 1.1.6
+- correcting paths and icons
+
+* Sat May 12 2018 agelos <agelospanagiotakis@gmail.com> 1.1.5
+- setting correct paths
+
 * Sat May 12 2018 agelos <agelospanagiotakis@gmail.com> 1.1.4
 
 * Sat May 12 2018 agelos <agelospanagiotakis@gmail.com> 1.1.3
